--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,57 +1,21 @@
+# This config is equivalent to both the '.circleci/extended/orb-free.yml' and the base '.circleci/config.yml'
 version: 2.1
 
-jobs:
-  lint-app:
-    docker:
-      - image: circleci/node:13.8.0
-    steps:
-      - checkout
-  build-docker:
-    machine: true
-    steps:
-      - checkout
-      - run:
-          name: Build docker container for each microservices
-          command: |
-            echo "--------- Installing dependencies-----------"
-            sudo curl -LO https://nodejs.org/dist/v18.0.0/node-v18.0.0-linux-x64.tar.xz
-            sudo tar -xvf node-v18.0.0-linux-x64.tar.xz
-            sudo cp -r node-v18.0.0-linux-x64/{bin,include,lib,share} /usr/
-            node --version => v18.0.0
-            sudo apt install nodejs
+# Orbs are reusable packages of CircleCI configuration that you may share across projects, enabling you to create encapsulated, parameterized commands, jobs, and executors that can be used across multiple projects.
+# See: https://circleci.com/docs/2.0/orb-intro/
+orbs:
+  node: circleci/node@4.7
 
-            echo "--------- The images is Building ------------"
-
-            docker build -t udagram-api-feed ./udagram-api-feed
-            docker tag udagram-api-feed jameskaranja/udagram-api-feed:v3
-
-            docker build -t udagram-api-user ./udagram-api-user
-            docker tag udagram-api-user jameskaranja/udagram-api-user:v3
-            
-            docker build -t udagram-frontend ./udagram-frontend
-            docker tag udagram-frontend jameskaranja/udagram-frontend:v3
-
-            docker build -t udagram-reverseproxy ./udagram-reverseproxy
-            docker tag udagram-reverseproxy jameskaranja/udagram-reverseproxy:v3
-
-            echo "-------- All images succesfully built----------"
-
-            echo " ------- login in to hub--------"
-
-            docker login -u jameskaranja -p $DOCKERPASS
-
-            echo "-------------- Pushing images to dockerhub-------"
-
-            docker push jameskaranja/udagram-api-feed:v3
-            docker push jameskaranja/udagram-api-user:v3
-            docker push jameskaranja/udagram-frontend:v3
-            docker push jameskaranja/udagram-reverseproxy:v3
-
+# Invoke jobs via workflows
+# See: https://circleci.com/docs/2.0/configuration-reference/#workflows
 workflows:
-  default:
+  sample: # This is the name of the workflow, feel free to change it to better match your workflow.
+    # Inside the workflow, you define the jobs you want to run.
     jobs:
-      - lint-app
-      - build-docker:
-          requires: [lint-app]
-
-
+      - node/test:
+          # This is the node version to use for the `cimg/node` tag
+          # Relevant tags can be found on the CircleCI Developer Hub
+          # https://circleci.com/developer/images/image/cimg/node
+          version: '16.10'
+          # If you are using yarn, change the line below from "npm" to "yarn"
+          pkg-manager: npm
