--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -17,7 +17,7 @@ services:
       POSTGRES_HOST: "postgresdb.c8fylkhtlboe.us-east-1.rds.amazonaws.com"
       AWS_REGION: "us-east-1" 
       AWS_PROFILE: "default" 
-      AWS_BUCKET: "arn:aws:s3:::bucket-541453266566-dev"
+      AWS_BUCKET: "myawsbucket-541453266566-dev"
       JWT_SECRET: "testing"
       URL: "http://localhost:8100"
   backend-feed:
@@ -31,7 +31,7 @@ services:
       POSTGRES_HOST: "postgresdb.c8fylkhtlboe.us-east-1.rds.amazonaws.com"
       AWS_REGION: "us-east-1"
       AWS_PROFILE: "default" 
-      AWS_BUCKET: "arn:aws:s3:::bucket-541453266566-dev"
+      AWS_BUCKET: "myawsbucket-541453266566-dev"
       JWT_SECRET: "testing"
       URL: "http://localhost:8100"
   frontend:
