Complete Travis yml file included

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,62 +1,50 @@
-version: 2.1
 language: node_js
 node_js:
  - "16.17.0"
- env:
-- MY_VAR=EverythignIsAwesome
-- NODE_ENV=TEST
-jobs:
-  lint-app:
-    docker:
-      - image: circleci/node:16.17.0
-    steps:
-      - checkout
-  build-docker:
-    machine: true
-    steps:
-      - checkout
-      - run:
-          name: Build docker container for each microservices
-          command: |
-            echo "--------- Installing dependencies-----------"
-            sudo curl -LO https://nodejs.org/dist/v18.0.0/node-v18.0.0-linux-x64.tar.xz
-            sudo tar -xvf node-v18.0.0-linux-x64.tar.xz
-            sudo cp -r node-v18.0.0-linux-x64/{bin,include,lib,share} /usr/
-            node --version => v18.0.0
-            sudo apt install nodejs
+services:
+  - docker
 
-            echo "--------- The images is Building ------------"
+# Pre-testing installs
+install:
+  - echo "--------- Installing dependencies-----------"
+  - sudo curl -LO https://nodejs.org/dist/v18.0.0/node-v18.0.0-linux-x64.tar.xz
+  - sudo tar -xvf node-v18.0.0-linux-x64.tar.xz
+  - sudo cp -r node-v18.0.0-linux-x64/{bin,include,lib,share} /usr/
+  - node --version => v18.0.0
+  - sudo apt install nodejs
 
-            docker build -t udagram-api-feed ./udagram-api-feed
-            docker tag udagram-api-feed jameskaranja/udagram-api-feed:v3
+# Scripts to be run such as tests
+before_script:
+  - npm test
 
-            docker build -t udagram-api-user ./udagram-api-user
-            docker tag udagram-api-user jameskaranja/udagram-api-user:v3
+script:
+  - docker --version # print the version for logging
+  - echo "--------- The images is Building ------------"
+
+  - docker build -t udagram-api-feed ./udagram-api-feed
+  - docker tag udagram-api-feed jameskaranja/udagram-api-feed:v3
+
+  - docker build -t udagram-api-user ./udagram-api-user
+  - docker tag udagram-api-user jameskaranja/udagram-api-user:v3
             
-            docker build -t udagram-frontend ./udagram-frontend
-            docker tag udagram-frontend jameskaranja/udagram-frontend:v3
+  - docker build -t udagram-frontend ./udagram-frontend
+  - docker tag udagram-frontend jameskaranja/udagram-frontend:v3
 
-            docker build -t udagram-reverseproxy ./udagram-reverseproxy
-            docker tag udagram-reverseproxy jameskaranja/udagram-reverseproxy:v3
+  - docker build -t udagram-reverseproxy ./udagram-reverseproxy
+  - docker tag udagram-reverseproxy jameskaranja/udagram-reverseproxy:v3
 
-            echo "-------- All images succesfully built----------"
+  - echo "-------- All images succesfully built----------"
 
-            echo " ------- login in to hub--------"
+# Tasks to perform after the process is successful. Formatting the Docker username and password as below enables you to programmatically log in without having the password exposed in logs.
+after_success:
+  - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
+  - echo " ------- login in to hub--------"
 
-            docker login -u jameskaranja -p $DOCKERPASS
+  - echo "-------------- Pushing images to dockerhub-------"
 
-            echo "-------------- Pushing images to dockerhub-------"
-
-            docker push jameskaranja/udagram-api-feed:v3
-            docker push jameskaranja/udagram-api-user:v3
-            docker push jameskaranja/udagram-frontend:v3
-            docker push jameskaranja/udagram-reverseproxy:v3
-
-workflows:
-  default:
-    jobs:
-      - lint-app
-      - build-docker:
-          requires: [lint-app]
+  - docker push jameskaranja/udagram-api-feed:v1
+  - docker push jameskaranja/udagram-api-user:v1
+  - docker push jameskaranja/udagram-frontend:v1
+  - docker push jameskaranja/udagram-reverseproxy:v1
 
 
