--- a/.travis.yml
+++ b/.travis.yml
@@ -1,17 +1,17 @@
 language: node_js
 node_js:
- - "16.0.0"
+ - "node"
 services:
   - docker
 
 # Pre-testing installs
 install:
   - echo "--------- Installing dependencies-----------"
-  - sudo curl -LO https://nodejs.org/dist/v16.0.0/node-v16.0.0-linux-x64.tar.xz
-  - sudo tar -xvf node-v16.0.0-linux-x64.tar.xz
-  - sudo cp -r node-v16.0.0-linux-x64/{bin,include,lib,share} /usr/
-  - node --version => v16.0.0
-  - sudo apt install nodejs
+  - sudo curl -LO https://nodejs.org/dist/v15.0.0/node-v15.0.0-linux-x64.tar.xz
+  - sudo tar -xvf node-v15.0.0-linux-x64.tar.xz
+  - sudo cp -r node-v15.0.0-linux-x64/{bin,include,lib,share} /usr/
+  - node --version => v15.0.0
+  - sudo apt-get install nodejs
  
 
 # Scripts to be run such as tests
